examples/test/testpolicy9091.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9091
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key20: value9
      key13: value36
      key14: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value13
          key44: value34
          key23: value6
      podSelector:
        matchLabels:
          key33: value44
          key21: value8
